<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                tools:context="com.example.lyndaob.reminderapplication.NewReminderActivity">

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/input_padding_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoCorrect"
                        android:hint="@string/reminder_about"
                        android:maxLines="1"
                        android:drawableStart="@drawable/ic_mode_edit"
                        android:drawablePadding="@dimen/text_drawable_padding"
                        android:id="@+id/title"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/input_padding_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:onClick="onDueDateClick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none|date"
                        android:hint="@string/due_date"
                        android:maxLines="1"
                        android:focusable="false"
                        android:drawableStart="@drawable/ic_event"
                        android:drawablePadding="@dimen/text_drawable_padding"
                        android:id="@+id/due_date"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:layout_marginTop="@dimen/input_padding_top"
                    android:onClick="onDueDateClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/due_date"
                    android:maxLines="1"
                    android:focusable="false"
                    android:drawableStart="@drawable/ic_event"
                    android:drawablePadding="@dimen/text_drawable_padding"/>
            <Spinner
                    android:id="@+id/repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Spinner
                    android:layout_marginTop="@dimen/input_padding_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/category"/>

            <Switch
                    android:layout_marginTop="@dimen/input_padding_top"
                    android:id="@+id/alarm"
                    android:text="@string/enable_alarm"
                    android:layout_width="wrap_content"
                    android:switchPadding="@dimen/switch_padding"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/save"
                    android:layout_marginTop="@dimen/input_padding_top"
                    android:onClick="onSaveButtonClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>
</layout>